Replace use of java.net.URL with java.net.URI in overlay API