@@ -20,7 +20,7 @@ import org.restlet.resource.ResourceException;
 
 import java.awt.Dimension;
 import java.io.File;
-import java.net.URL;
+import java.net.URI;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -432,7 +432,7 @@ public class ImageResourceTest extends ResourceTest {
                     new Dimension(64, 56),
                     Orientation.ROTATE_0,
                     "",
-                    new URL("http://example.org/"),
+                    new URI("http://example.org/"),
                     new HashMap<>(),
                     new HashMap<>());
 
